--- a/configure/STARmap_AllenVISp.yaml
+++ b/configure/STARmap_AllenVISp.yaml
@@ -5,7 +5,7 @@ magic: magic
 spatial_file: ./data/STARmap_norm.csv.pkl
 scrna_file: ./data/AllenVISp_magic.csv.pkl
 loc_file: ./data/STAR_Locations.tsv
-neighbor_file: /home/wangwk/singlecell/ST_RNA/Lasso/model/w_{0}_{1}_{2}_fold{3}.pkl
+neighbor_file: ./data/w_{0}_{1}_{2}_fold{3}.pkl
 
 train:
   name: train
