--- a/configure/osmFISH_Zeisel.yaml
+++ b/configure/osmFISH_Zeisel.yaml
@@ -5,7 +5,7 @@ magic: magic
 spatial_file: ./data/osmFISH_Cortex_scvi_norm.csv.pkl
 scrna_file: ./data/Zeisel_magic.txt.pkl
 loc_file: ./data/osm_Locations.txt
-neighbor_file: /home/wangwk/singlecell/ST_RNA/Lasso/model/w_{0}_{1}_{2}_fold{3}.pkl
+neighbor_file: ./data/w_{0}_{1}_{2}_fold{3}.pkl
 
 train:
   name: train
